@@ -93,6 +93,7 @@ enum {
     GNOME_SELECTOR_ASYNC_TYPE_CHECK_DIRECTORY,
     GNOME_SELECTOR_ASYNC_TYPE_ADD_FILE,
     GNOME_SELECTOR_ASYNC_TYPE_ADD_DIRECTORY,
+    GNOME_SELECTOR_ASYNC_TYPE_SET_FILENAME,
     GNOME_SELECTOR_ASYNC_TYPE_LAST
 };
 
